--- a/src/Javascript.ViewEngines/Javascript.ViewEngines.csproj
+++ b/src/Javascript.ViewEngines/Javascript.ViewEngines.csproj
@@ -35,7 +35,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ClearScript">
+    <Reference Include="ClearScript, Version=5.3.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ClearScript.V8.5.3.10.0\lib\ClearScript.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
